# hs-glc

./: .gitignore  README.md  getRepoData  hs-glc.cabal  loadPath
data/: Idris-dev.out  elm-compiler.out  pandoc.out  purescript.out  xmonad.out
src/: Crawler.hs  Crunch.hs  Errors.hs  GetConstrs.hs  GitLog.hs  HsInfo.hs  Main.hs  Result.hs
src/Crawler/: DiffIdx.hs  Options.hs
src/Crunch/: Options.hs
src/Git/: LogParser.hs  Process.hs  Types.hs
src/GitLog/: Parser.hs
src/HsInfo/: ASTInfo.hs
