name:                hs-glc
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              victor
maintainer:          v.cacciarimiraldo@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable hsglc
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       Diff >= 0.3,
                       base >=4.9 && <4.10,
                       containers >= 0.5.7.1,
                       haskell-src-exts >= 1.19,
                       mtl >= 2.2,
                       process >=1.4 && <1.5,
                       parsec >= 3.3

  hs-source-dirs:      src
  default-language:    Haskell2010
